--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <main>
       <h2></h2>
     </main>
-    <form>Add Recipes
+    <form>
+      <h2>Add Recipes</h2>
       
     </form>
   </body>
